--- a/.github/workflows/main_myfirstangularapp.yml
+++ b/.github/workflows/main_myfirstangularapp.yml
@@ -51,4 +51,4 @@ jobs:
         with:
           app-name: 'MyfirstAngularApp'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_3C7DEABC993D4ED8A0A56C83274A9F89 }}
-          package: ./dist/myfirstangularapp
+          package: .
